# pytch-website

./: .gitignore  LICENSE.md  README.rst  pyproject.toml  requirements_dev.txt
source/: about.rst  build-info.txt  build-tools  conf.py  contact.rst  developer.rst  help.rst  index.rst  licensing.rst  medialib  releases  source-build.rst  vm  webapp
source/_static/css/: pytch-classic.css  pytch.css
source/_templates/: dochome.html  layout.html
source/developer/: design-overview.rst  development-setup.rst  index.rst
source/legal/: index.rst  privacy-policy.rst  terms-of-use.rst
source/licences/: ace-editor.rst  bootstrap.rst  dexie.rst  easy-peasy.rst  file-saver.rst  font-awesome.rst  jszip.rst  reach-router.rst  react-bootstrap.rst  react.rst  redux.rst  skulpt.rst
website-layer/: make.sh
