[tool.poetry]
name = "pytch-website"
version = "0.1.0"
description = "Content for Pytch website"
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README.md"
packages = [{include = "pytch_website"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
