[tool.poetry]
name = "pytch-website"
version = "0.1.0"
description = "Content for Pytch website"
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README.rst"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.0.0"
sphinx-autobuild = "^2021.3.14"
requests = ">=2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
